--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,30 +11,17 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7.29.3
+        uses: actions/checkout@v2
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: '16.20'
 
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-        with:
-          version: nightly
-
-      # - name: Install dependencies
-      #   run: pnpm i --frozen-lockfile
-
-      - name: Build worker
-        run: pnpm build
+      - name: Install dependencies
+        run: npm install
 
       - name: Deploy worker
-        env:
-          CF_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
-        run: npx wrangler deploy
+        uses: cloudflare/wrangler-action@1.2.2
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
