--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy Cloudflare Worker
+name: Deploy
 
 on:
   push:
@@ -8,20 +8,11 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    name: Deploy
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16.20'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Deploy worker
-        uses: cloudflare/wrangler-action@1.21.0
+      - uses: actions/checkout@v2
+      - name: Publish
+        uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
