--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,5 +15,5 @@ jobs:
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          # accountId: ${{ secrets.CF_ACCOUNT_ID }}
           command: deploy
