--- a/package.json
+++ b/package.json
@@ -1,12 +1,28 @@
 {
-  "name": "aged-wood-0749",
-  "version": "0.0.0",
+  "name": "@examples/cloudflare-workers",
+  "version": "10.36.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "deploy": "wrangler deploy",
-    "start": "wrangler dev"
+    "dev": "wrangler dev",
+    "lint": "eslint --cache --ext \".js,.ts,.tsx\" --report-unused-disable-directives src",
+    "test-dev": "start-server-and-test 'wrangler dev --local' http://127.0.0.1:8787 'tsx src/client.ts'"
+  },
+  "dependencies": {
+    "@trpc/client": "^10.36.0",
+    "@trpc/server": "^10.36.0",
+    "zod": "^3.0.0"
   },
   "devDependencies": {
-    "wrangler": "^3.0.0"
+    "@cloudflare/workers-types": "^4.0.0",
+    "@types/node": "^18.16.16",
+    "eslint": "^8.40.0",
+    "start-server-and-test": "^1.12.0",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3",
+    "wrangler": "^2.0.17"
+  },
+  "publishConfig": {
+    "access": "restricted"
   }
 }
