--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,4 @@
-name = "aged-wood-0749"
-main = "src/worker.js"
+name = "cloudflare-workers"
+main = "src/index.ts"
 compatibility_date = "2023-07-24"
+
