--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install 
+        run: npm install @trpc/server zod 
 
       - name: Deploy to Cloudflare
         env: 
