--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "@trpc/server": "^10.36.0",
-    "zod": "^3.0.0"
+    "zod": "^3.0.0",
+    "wrangler": "3.4.0"
   }
 }
  
